[package]
name = "shymem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = {version="0.51.1",features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_Security","Wdk_Foundation"]}

ntstatus = "0.1.2"
ntapi = {version="0.4.1",features = ["func-types","kernel"]}
winapi = { version = "0.3.9", features = ["ntdef"] }
